<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_Registro"
    android:background="@drawable/gradient_background">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="25dp"
        android:scrollbars="vertical">

        <!-- CORREO -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_style">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/UsuarioRegistro_et_correo"
                android:hint="@string/UsuarioRegistro_et_correo"
                android:inputType="textEmailAddress"
                android:autofillHints="false"
                android:background="@drawable/edit_text_style"
                android:layout_marginStart="10dp"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- NOMBRE -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_style">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/UsuarioRegistro_et_nombre"
                android:hint="@string/UsuarioRegistro_et_nombre"
                android:inputType="text"
                android:autofillHints="false"
                android:background="@drawable/edit_text_style"
                android:layout_marginStart="10dp"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- APELLIDOS -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_style">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/UsuarioRegistro_et_apellidos"
                android:hint="@string/UsuarioRegistro_et_apellidos"
                android:inputType="text"
                android:autofillHints="false"
                android:background="@drawable/edit_text_style"
                android:layout_marginStart="10dp"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- EDAD -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_style">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/UsuarioRegistro_et_edad"
                android:hint="@string/UsuarioRegistro_et_edad"
                android:inputType="number"
                android:autofillHints="false"
                android:background="@drawable/edit_text_style"
                android:layout_marginStart="10dp"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- SEXO -->
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/edit_text_style"
            android:layout_marginTop="15dp"
            android:checkedButton="@id/UsuarioRegistro_rb_hombre">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/UsuarioRegistro_rb_hombre"
                android:text="@string/UsuarioRegistro_rb_hombre"
                android:layout_marginEnd="20dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/UsuarioRegistro_rb_mujer"
                android:text="@string/UsuarioRegistro_rb_mujer" />

        </RadioGroup>
        <!-- USUARIO -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_style">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/UsuarioRegistro_et_usuario"
                android:hint="@string/UsuarioRegistro_et_usuario"
                android:inputType="text"
                android:autofillHints="false"
                android:background="@drawable/edit_text_style"
                android:layout_marginStart="10dp"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- CONTRASEÑA -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_style"
            app:passwordToggleEnabled="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/UsuarioRegistro_et_pass"
                android:hint="@string/UsuarioRegistro_et_pass"
                android:inputType="textPassword"
                android:autofillHints="false"
                android:background="@drawable/edit_text_style"
                android:layout_marginStart="10dp"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- BOTON REGISTRAR -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/UsuarioRegistro_btn_registro"
            android:text="@string/UsuarioRegistro_btn_registro"
            android:background="@drawable/button_style"
            android:textColor="@color/Color_Button_Texto"
            android:layout_marginTop="30dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>